proper exceptional handeling and optimize