@@ -2,11 +2,14 @@ package in.edu.jspmjscoe.admissionportal.services.impl.assessment;
 
 import in.edu.jspmjscoe.admissionportal.dtos.assessment.*;
 import in.edu.jspmjscoe.admissionportal.dtos.subject.SubjectDTO;
+import in.edu.jspmjscoe.admissionportal.exception.ExamNotFoundException;
+import in.edu.jspmjscoe.admissionportal.exception.UnitAssessmentNotFoundException;
+import in.edu.jspmjscoe.admissionportal.mappers.assessment.*;
+import in.edu.jspmjscoe.admissionportal.mappers.subject.SubjectMapper;
 import in.edu.jspmjscoe.admissionportal.model.assessment.Attendance;
 import in.edu.jspmjscoe.admissionportal.model.assessment.StudentExam;
 import in.edu.jspmjscoe.admissionportal.model.assessment.StudentUnitAssessment;
 import in.edu.jspmjscoe.admissionportal.model.student.Student;
-import in.edu.jspmjscoe.admissionportal.model.subject.Subject;
 import in.edu.jspmjscoe.admissionportal.repositories.assessment.AttendanceRepository;
 import in.edu.jspmjscoe.admissionportal.repositories.assessment.StudentExamRepository;
 import in.edu.jspmjscoe.admissionportal.repositories.assessment.StudentUnitAssessmentRepository;
@@ -19,7 +22,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.*;
 import java.util.stream.Collectors;
-
 @Service
 @RequiredArgsConstructor
 @Transactional(readOnly = true)
@@ -31,6 +33,16 @@ public class CceAdminServiceImpl implements CceAdminService {
     private final StudentExamRepository examRepository;
     private final AttendanceRepository attendanceRepository;
 
+    private final StudentCCEMapper studentCCEMapper;
+    private final StudentUnitAssessmentMapper studentUnitAssessmentMapper;
+    private final StudentExamMapper studentExamMapper;
+    private final AttendanceMapper attendanceMapper;
+    private final UnitMarksMapper unitMarksMapper;
+    private final StudentWithUnitsMapper studentWithUnitsMapper;
+    private final SubjectMapper subjectMapper;
+
+
+    // ---------- Helper ----------
     private String getDivisionGroup(String division) {
         if (division == null || division.trim().isEmpty()) return "A";
         char first = Character.toUpperCase(division.trim().charAt(0));
@@ -39,131 +51,109 @@ public class CceAdminServiceImpl implements CceAdminService {
         return "A";
     }
 
-    // ----------------- Students -----------------
+    // ---------- Students ----------
     @Override
     public List<StudentCCEDTO> getStudentsByDivision(String division) {
-        List<Student> students = studentRepository.findByDivision(division);
-        return students.stream().map(s -> StudentCCEDTO.builder()
-                .studentId(s.getStudentId())
-                .candidateName(s.getCandidateName())
-                .rollNo(s.getRollNo())
-                .division(s.getDivision())
-                .build()).collect(Collectors.toList());
+        return studentRepository.findByDivision(division)
+                .stream()
+                .map(studentCCEMapper::toDto)
+                .toList();
     }
 
-    // ----------------- Subjects -----------------
+    // ---------- Subjects ----------
     @Override
     public List<SubjectDTO> getSubjectsForDivision(String division) {
         String group = getDivisionGroup(division);
-        List<Subject> subjects = subjectRepository.findAll();
-        return subjects.stream()
-                .filter(sub -> "ALL".equalsIgnoreCase(sub.getSubjectGroup()) ||
-                        group.equalsIgnoreCase(sub.getSubjectGroup()))
-                .map(sub -> SubjectDTO.builder()
-                        .subjectId(sub.getSubjectId())
-                        .name(sub.getName())
-                        .code(sub.getCode())
-                        .theoryCredits(sub.getTheoryCredits())
-                        .practicalCredits(sub.getPracticalCredits())
-                        .yearOfStudy(sub.getYearOfStudy())
-                        .subjectGroup(sub.getSubjectGroup())
-                        .semester(sub.getSemester())
-                        .subjectType(sub.getSubjectType())
-                        .subjectCategory(sub.getSubjectCategory())
-                        .totalUnits(sub.getTotalUnits())
-                        .status(sub.getStatus())
-                        .courseId(sub.getCourse() != null ? sub.getCourse().getCourseId() : null)
-                        .build())
-                .collect(Collectors.toList());
+        return subjectRepository.findAll().stream()
+                .filter(sub -> "ALL".equalsIgnoreCase(sub.getSubjectGroup()) || group.equalsIgnoreCase(sub.getSubjectGroup()))
+                .map(subjectMapper::toDto)// Assuming SubjectMapper is a singleton via INSTANCE
+                .toList();
     }
 
-    // ----------------- Unit Assessments -----------------
+    // ---------- Unit Assessments ----------
     @Override
     public List<StudentUnitAssessmentDTO> getUnitAssessmentsForDivisionAndSubject(String division, Long subjectId) {
-        String group = getDivisionGroup(division);
-        List<Student> students = studentRepository.findByDivision(division);
-        List<Long> studentIds = students.stream().map(Student::getStudentId).collect(Collectors.toList());
-        List<StudentUnitAssessment> units = studentUnitAssessmentRepository.findByStudentStudentIdInAndSubjectSubjectIdIn(studentIds, Collections.singletonList(subjectId));
+        List<Long> studentIds = studentRepository.findByDivision(division)
+                .stream().map(Student::getStudentId).toList();
 
-        return units.stream().map(studentUnitAssessment -> StudentUnitAssessmentDTO.builder()
-                        .id(studentUnitAssessment.getId())
-                        .studentId(studentUnitAssessment.getStudent().getStudentId())
-                        .rollNo(studentUnitAssessment.getStudent().getRollNo())
-                        .candidateName(studentUnitAssessment.getStudent().getCandidateName())
-                        .subjectId(studentUnitAssessment.getSubject().getSubjectId())
-                        .unitNumber(studentUnitAssessment.getUnitNumber())
-                        .quizMarks(studentUnitAssessment.getQuizMarks())
-                        .activityMarks(studentUnitAssessment.getActivityMarks())
-                        .build())
-                .collect(Collectors.toList());
+        return studentUnitAssessmentRepository
+                .findByStudentStudentIdInAndSubjectSubjectIdIn(studentIds, Collections.singletonList(subjectId))
+                .stream()
+                .map(studentUnitAssessmentMapper::toDto)
+                .toList();
     }
 
     @Override
     @Transactional
     public StudentUnitAssessmentDTO updateUnitAssessmentMarks(Long unitId, Double quizMarks, Double activityMarks) {
-        StudentUnitAssessment studentUnitAssessment = studentUnitAssessmentRepository.findById(unitId)
-                .orElseThrow(() -> new RuntimeException("Unit assessment not found: " + unitId));
-        if (quizMarks != null) studentUnitAssessment.setQuizMarks(quizMarks);
-        if (activityMarks != null) studentUnitAssessment.setActivityMarks(activityMarks);
-        studentUnitAssessmentRepository.save(studentUnitAssessment);
-        return StudentUnitAssessmentDTO.builder()
-                .id(studentUnitAssessment.getId())
-                .studentId(studentUnitAssessment.getStudent().getStudentId())
-                .rollNo(studentUnitAssessment.getStudent().getRollNo())
-                .candidateName(studentUnitAssessment.getStudent().getCandidateName())
-                .subjectId(studentUnitAssessment.getSubject().getSubjectId())
-                .unitNumber(studentUnitAssessment.getUnitNumber())
-                .quizMarks(studentUnitAssessment.getQuizMarks())
-                .activityMarks(studentUnitAssessment.getActivityMarks())
-                .build();
+        StudentUnitAssessment unit = studentUnitAssessmentRepository.findById(unitId)
+                .orElseThrow(() -> new UnitAssessmentNotFoundException(unitId));
+
+        if (quizMarks != null) unit.setQuizMarks(quizMarks);
+        if (activityMarks != null) unit.setActivityMarks(activityMarks);
+
+        studentUnitAssessmentRepository.save(unit);
+        return studentUnitAssessmentMapper.toDto(unit);
     }
 
-    // ----------------- Exams -----------------
+    @Override
+    public List<StudentWithUnitsDTO> getStudentsWithUnits(String division, Long subjectId) {
+        List<StudentCCEDTO> students = getStudentsByDivision(division);
+        if (students.isEmpty()) return Collections.emptyList();
+
+        List<Long> studentIds = students.stream().map(StudentCCEDTO::getStudentId).toList();
+        List<StudentUnitAssessment> units = studentUnitAssessmentRepository.findByStudentStudentIdInAndSubjectSubjectIdIn(
+                studentIds, Collections.singletonList(subjectId));
+
+        Map<Long, List<UnitMarksDTO>> studentUnitsMap = units.stream()
+                .collect(Collectors.groupingBy(
+                        u -> u.getStudent().getStudentId(),
+                        Collectors.mapping(unitMarksMapper::toDto, Collectors.toList())
+                ));
+
+        return students.stream()
+                .map(s -> {
+                    StudentWithUnitsDTO dto = studentWithUnitsMapper.toDto(studentRepository.getReferenceById(s.getStudentId()));
+                    dto.setUnits(studentUnitsMap.getOrDefault(s.getStudentId(), Collections.emptyList()));
+                    return dto;
+                })
+                .toList();
+    }
+
+    // ---------- Exams ----------
     @Override
     public List<StudentExamDTO> getExamsForDivisionAndSubject(String division, Long subjectId) {
-        List<Student> students = studentRepository.findByDivision(division);
-        List<Long> studentIds = students.stream().map(Student::getStudentId).collect(Collectors.toList());
-        List<StudentExam> exams = examRepository.findByStudentStudentIdInAndSubjectSubjectIdIn(studentIds, Collections.singletonList(subjectId));
+        List<Long> studentIds = studentRepository.findByDivision(division)
+                .stream().map(Student::getStudentId).toList();
 
-        return exams.stream().map(e -> StudentExamDTO.builder()
-                .id(e.getId())
-                .studentId(e.getStudent().getStudentId())
-                .subjectId(e.getSubject().getSubjectId())
-                .examType(e.getExamType().name())
-                .marksObtained(e.getMarksObtained())
-                .build()).collect(Collectors.toList());
+        return examRepository.findByStudentStudentIdInAndSubjectSubjectIdIn(studentIds, Collections.singletonList(subjectId))
+                .stream()
+                .map(studentExamMapper::toDto)
+                .toList();
     }
 
     @Override
     @Transactional
     public StudentExamDTO updateExamMarks(Long examId, Double marksObtained) {
         StudentExam exam = examRepository.findById(examId)
-                .orElseThrow(() -> new RuntimeException("Exam not found: " + examId));
+                .orElseThrow(() -> new ExamNotFoundException(examId));
+
         if (marksObtained != null) exam.setMarksObtained(marksObtained);
+
         examRepository.save(exam);
-        return StudentExamDTO.builder()
-                .id(exam.getId())
-                .studentId(exam.getStudent().getStudentId())
-                .subjectId(exam.getSubject().getSubjectId())
-                .examType(exam.getExamType().name())
-                .marksObtained(exam.getMarksObtained())
-                .build();
+        return studentExamMapper.toDto(exam);
     }
 
-    // ----------------- Attendance -----------------
+    // ---------- Attendance ----------
     @Override
     public List<AttendanceDTO> getAttendanceForDivisionAndSubject(String division, Long subjectId) {
-        List<Student> students = studentRepository.findByDivision(division);
-        List<Long> studentIds = students.stream().map(Student::getStudentId).collect(Collectors.toList());
-        List<Attendance> attendances = attendanceRepository.findByStudentStudentIdInAndSubjectSubjectIdIn(studentIds, Collections.singletonList(subjectId));
+        List<Long> studentIds = studentRepository.findByDivision(division)
+                .stream().map(Student::getStudentId).toList();
 
-        return attendances.stream().map(a -> AttendanceDTO.builder()
-                .attendanceId(a.getAttendanceId())
-                .studentId(a.getStudent().getStudentId())
-                .subjectId(a.getSubject().getSubjectId())
-                .totalClasses(a.getTotalClasses())
-                .attendedClasses(a.getAttendedClasses())
-                .build()).collect(Collectors.toList());
+        return attendanceRepository.findByStudentStudentIdInAndSubjectSubjectIdIn(studentIds, Collections.singletonList(subjectId))
+                .stream()
+                .map(attendanceMapper::toDto)
+                .toList();
     }
 
     @Override
@@ -171,117 +161,35 @@ public class CceAdminServiceImpl implements CceAdminService {
     public AttendanceDTO updateAttendance(Long attendanceId, Integer totalClasses, Integer attendedClasses) {
         Attendance att = attendanceRepository.findById(attendanceId)
                 .orElseThrow(() -> new RuntimeException("Attendance not found: " + attendanceId));
+
         if (totalClasses != null) att.setTotalClasses(totalClasses);
         if (attendedClasses != null) att.setAttendedClasses(attendedClasses);
+
         attendanceRepository.save(att);
-        return AttendanceDTO.builder()
-                .attendanceId(att.getAttendanceId())
-                .studentId(att.getStudent().getStudentId())
-                .subjectId(att.getSubject().getSubjectId())
-                .totalClasses(att.getTotalClasses())
-                .attendedClasses(att.getAttendedClasses())
-                .build();
+        return attendanceMapper.toDto(att);
     }
 
-
-    @Override
-    public List<StudentUnitAssessmentDTO> getAllUnitsForSubject(List<StudentCCEDTO> students, Long subjectId) {
-        if (students.isEmpty()) return Collections.emptyList();
-
-        List<Long> studentIds = students.stream()
-                .map(StudentCCEDTO::getStudentId)
-                .collect(Collectors.toList());
-
-        List<StudentUnitAssessment> units = studentUnitAssessmentRepository.findByStudentStudentIdInAndSubjectSubjectIdIn(
-                studentIds, Collections.singletonList(subjectId));
-
-        return units.stream().map(studentUnitAssessment -> StudentUnitAssessmentDTO.builder()
-                .id(studentUnitAssessment.getId())
-                .studentId(studentUnitAssessment.getStudent().getStudentId())
-                .rollNo(studentUnitAssessment.getStudent().getRollNo())
-                .candidateName(studentUnitAssessment.getStudent().getCandidateName())
-                .subjectId(studentUnitAssessment.getSubject().getSubjectId())
-                .unitNumber(studentUnitAssessment.getUnitNumber())
-                .quizMarks(studentUnitAssessment.getQuizMarks())
-                .activityMarks(studentUnitAssessment.getActivityMarks())
-                .build()
-        ).collect(Collectors.toList());
-    }
-
-    @Override
-    public List<StudentWithUnitsDTO> getStudentsWithUnits(String division, Long subjectId) {
-        // 1. Fetch students in the division
-        List<StudentCCEDTO> students = getStudentsByDivision(division);
-        if (students.isEmpty()) return Collections.emptyList();
-
-        List<Long> studentIds = students.stream()
-                .map(StudentCCEDTO::getStudentId)
-                .collect(Collectors.toList());
-
-        // 2. Fetch all units for these students and the subject
-        List<StudentUnitAssessment> units = studentUnitAssessmentRepository.findByStudentStudentIdInAndSubjectSubjectIdIn(
-                studentIds, Collections.singletonList(subjectId));
-
-        // 3. Group units by studentId
-        Map<Long, List<UnitMarksDTO>> studentUnitsMap = units.stream()
-                .collect(Collectors.groupingBy(
-                        u -> u.getStudent().getStudentId(),
-                        Collectors.mapping(
-                                u -> UnitMarksDTO.builder()
-                                        .unitNumber(u.getUnitNumber())
-                                        .quizMarks(u.getQuizMarks())
-                                        .activityMarks(u.getActivityMarks())
-                                        .build(),
-                                Collectors.toList()
-                        )
-                ));
-
-        // 4. Map students to StudentWithUnitsDTO
-        return students.stream().map(s -> {
-            List<UnitMarksDTO> unitList = studentUnitsMap.getOrDefault(s.getStudentId(), new ArrayList<>());
-            return StudentWithUnitsDTO.builder()
-                    .studentId(s.getStudentId())
-                    .candidateName(s.getCandidateName())
-                    .rollNo(s.getRollNo())
-                    .units(unitList)
-                    .build();
-        }).collect(Collectors.toList());
-    }
-
+    // ---------- Bulk Updates ----------
     @Override
     @Transactional
     public List<StudentUnitAssessmentDTO> updateMultipleUnitAssessments(List<UnitUpdateRequestDTO> updates) {
         if (updates == null || updates.isEmpty()) return Collections.emptyList();
 
-        // Fetch all entities in one go
         List<Long> unitIds = updates.stream().map(UnitUpdateRequestDTO::getUnitId).toList();
         Map<Long, StudentUnitAssessment> existingMap = studentUnitAssessmentRepository.findAllById(unitIds)
-                .stream()
-                .collect(Collectors.toMap(StudentUnitAssessment::getId, u -> u));
+                .stream().collect(Collectors.toMap(StudentUnitAssessment::getId, u -> u));
 
-        // Apply updates
-        for (UnitUpdateRequestDTO req : updates) {
-            StudentUnitAssessment studentUnitAssessment = existingMap.get(req.getUnitId());
-            if (studentUnitAssessment == null) {
-                throw new RuntimeException("Unit assessment not found: " + req.getUnitId());
-            }
-            if (req.getQuizMarks() != null) studentUnitAssessment.setQuizMarks(req.getQuizMarks());
-            if (req.getActivityMarks() != null) studentUnitAssessment.setActivityMarks(req.getActivityMarks());
-        }
+        updates.forEach(req -> {
+            StudentUnitAssessment unit = existingMap.get(req.getUnitId());
+            if (unit == null) throw new UnitAssessmentNotFoundException(req.getUnitId());
 
-        // Save all in batch
-        List<StudentUnitAssessment> saved = studentUnitAssessmentRepository.saveAll(existingMap.values());
+            if (req.getQuizMarks() != null) unit.setQuizMarks(req.getQuizMarks());
+            if (req.getActivityMarks() != null) unit.setActivityMarks(req.getActivityMarks());
+        });
 
-        return saved.stream().map(studentUnitAssessment -> StudentUnitAssessmentDTO.builder()
-                .id(studentUnitAssessment.getId())
-                .studentId(studentUnitAssessment.getStudent().getStudentId())
-                .rollNo(studentUnitAssessment.getStudent().getRollNo())
-                .candidateName(studentUnitAssessment.getStudent().getCandidateName())
-                .subjectId(studentUnitAssessment.getSubject().getSubjectId())
-                .unitNumber(studentUnitAssessment.getUnitNumber())
-                .quizMarks(studentUnitAssessment.getQuizMarks())
-                .activityMarks(studentUnitAssessment.getActivityMarks())
-                .build()).toList();
+        return studentUnitAssessmentRepository.saveAll(existingMap.values())
+                .stream().map(studentUnitAssessmentMapper::toDto)
+                .toList();
     }
 
     @Override
@@ -289,30 +197,35 @@ public class CceAdminServiceImpl implements CceAdminService {
     public List<StudentExamDTO> updateExamMarksBulk(List<ExamUpdateRequestDTO> requests) {
         if (requests == null || requests.isEmpty()) return Collections.emptyList();
 
-        // Fetch all entities in one go
         List<Long> examIds = requests.stream().map(ExamUpdateRequestDTO::getExamId).toList();
         Map<Long, StudentExam> existingMap = examRepository.findAllById(examIds)
-                .stream()
-                .collect(Collectors.toMap(StudentExam::getId, e -> e));
+                .stream().collect(Collectors.toMap(StudentExam::getId, e -> e));
 
-        // Apply updates
-        for (ExamUpdateRequestDTO req : requests) {
+        requests.forEach(req -> {
             StudentExam exam = existingMap.get(req.getExamId());
-            if (exam == null) {
-                throw new RuntimeException("Exam not found: " + req.getExamId());
-            }
+            if (exam == null) throw new ExamNotFoundException(req.getExamId());
             exam.setMarksObtained(req.getMarksObtained());
-        }
+        });
 
-        // Save all in batch
-        List<StudentExam> saved = examRepository.saveAll(existingMap.values());
-
-        return saved.stream().map(e -> StudentExamDTO.builder()
-                .id(e.getId())
-                .studentId(e.getStudent().getStudentId())
-                .subjectId(e.getSubject().getSubjectId())
-                .examType(e.getExamType().name())
-                .marksObtained(e.getMarksObtained())
-                .build()).toList();
+        return examRepository.saveAll(existingMap.values())
+                .stream().map(studentExamMapper::toDto)
+                .toList();
     }
+
+
+    @Override
+    public List<StudentUnitAssessmentDTO> getAllUnitsForSubject(List<StudentCCEDTO> students, Long subjectId) {
+        if (students == null || students.isEmpty()) return Collections.emptyList();
+
+        List<Long> studentIds = students.stream()
+                .map(StudentCCEDTO::getStudentId)
+                .toList();
+
+        return studentUnitAssessmentRepository
+                .findByStudentStudentIdInAndSubjectSubjectIdIn(studentIds, Collections.singletonList(subjectId))
+                .stream()
+                .map(studentUnitAssessmentMapper::toDto)
+                .toList();
+    }
+
 }
